--- a/front_delliv/package.json
+++ b/front_delliv/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/jsonwebtoken": "^9.0.5",
@@ -52,7 +51,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/react": "^14.1.2",
+    "babel-jest": "^29.7.0",
     "css-loader": "^6.8.1",
+    "jest-dom": "^4.0.0",
     "style-loader": "^3.3.3"
   }
 }
